--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.6.5",
     "fullcalendar-scheduler": "^5.1.0",
     "jquery": "^3.5.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
