--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.1.0",
     "@fullcalendar/daygrid": "^5.1.0",
     "@fullcalendar/interaction": "^5.1.0",
+    "@fullcalendar/resource-timeline": "^5.1.0",
     "@fullcalendar/vue": "^5.1.0",
-    "@keenmate/vue-adminlte": "^0.16.0",
+    "@keenmate/vue-adminlte": "^0.17.0",
     "core-js": "^3.6.5",
     "fullcalendar-scheduler": "^5.1.0",
     "jquery": "^3.5.1",
