--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "vue": "^2.6.11",
-    "vue-fragment": "^1.5.1"
+    "vue-fragment": "^1.5.1",
+    "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
